--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/facebook": "^4.7.0",
     "@ionic-native/firebase": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "^0.1.25",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
@@ -42,7 +44,11 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "576134629428864",
+        "APP_NAME": "chatApp"
+      }
     }
   }
 }
