--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
     "@ionic-native/facebook": "^4.7.0",
     "@ionic-native/firebase": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
+    "@types/lodash": "^4.14.106",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "^0.1.25",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.5",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -48,7 +52,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "576134629428864",
         "APP_NAME": "chatApp"
-      }
+      },
+      "cordova-plugin-camera": {}
     }
   }
 }
