--- a/package.json
+++ b/package.json
@@ -30,9 +30,15 @@
     "@ionic/storage": "2.1.3",
     "@types/lodash": "^4.14.106",
     "angularfire2": "^5.0.0-rc.6.0",
+    "cordova-android": "^7.0.0",
     "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "^0.1.25",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -53,7 +59,15 @@
         "APP_ID": "576134629428864",
         "APP_NAME": "chatApp"
       },
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
